# DebugMyProtocol

./: .gitignore  CMakeLists.txt  EnumHeader.h  Makefile  ModbusBase.h  ModbusFrameInfo.h  ModbusRegReadDefinitions.h  README.md  addregdialog.cpp  addregdialog.h  addregdialog.ui  cmake_install.cmake  coap.cpp  coap.h  displaycommunication.cpp  displaycommunication.h  displaycommunication.ui  errorcounterdialog.cpp  errorcounterdialog.h  errorcounterdialog.ui  floatbox.cpp  floatbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdefines.cpp  mapdefines.h  modbus_ascii.cpp  modbus_ascii.h  modbus_rtu.cpp  modbus_rtu.h  modbus_tcp.cpp  modbus_tcp.h  modbuswidget.cpp  modbuswidget.h  modbuswidget.ui  modbuswritemultiplecoilsdialog.cpp  modbuswritemultiplecoilsdialog.h  modbuswritemultiplecoilsdialog.ui  (+35 more)
include/: mytcpserver.h  mytcpsocket.h  myudpsocket.h
translations/: zh_CN.ts
